--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-media-library": "~17.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
