--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "~52.0.28",
     "expo-camera": "~16.0.14",
+    "expo-gl": "^15.0.4",
+    "expo-gl-cpp": "^11.4.0",
     "expo-image-picker": "~16.0.5",
+    "expo-media-library": "~17.0.5",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.6.0",
-    "react-native-web": "~0.19.13",
-    "expo-media-library": "~17.0.5"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
