--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-camera": "~16.0.14",
     "expo-gl": "^15.0.4",
