--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "axios": "^1.7.9",
+    "base64-js": "^1.5.1",
     "expo": "~52.0.28",
     "expo-camera": "~16.0.14",
     "expo-gl": "^15.0.4",
